versions/v3.6.0/build/dts/api/bindings/counter/nxp,imx-tmr.md
---
version: v3.6.0
source_url: https://docs.zephyrproject.org/3.6.0/build/dts/api/bindings/counter/nxp,imx-tmr.html
original_path: build/dts/api/bindings/counter/nxp,imx-tmr.html
---

This is the documentation for the latest (main) development branch of
Zephyr. If you are looking for the documentation of previous releases, use
the drop-down menu on the left and select the desired version.

# nxp,imx-tmr

Vendor: [NXP Semiconductors](../../bindings.md#dt-vendor-nxp)

## Description

```text
NXP MCUX Quad Timer Channel. Each channel of each quad timer can operate independently and hence will be realized as a separate counter device
```

## Properties

Node specific propertiesDeprecated node specific propertiesBase properties

Properties not inherited from the base binding file.

| Name | Type | Details |
| --- | --- | --- |
| `channel` | `int` | This property is **required**.  Legal values: `0`, `1`, `2`, `3` |
| `mode` | `string` | ```text counting mode of the timer, see qtmr_counting_mode_t enumerator type of the MCUXpresso SDK ```  This property is **required**.  Legal values: `'kQTMR_NoOperation'`, `'kQTMR_PriSrcRiseEdge'`, `'kQTMR_PriSrcRiseAndFallEdge'`, `'kQTMR_PriSrcRiseEdgeSecInpHigh'`, `'kQTMR_QuadCountMode'`, `'kQTMR_PriSrcRiseEdgeSecDir'`, `'kQTMR_SecSrcTrigPriCnt'`, `'kQTMR_CascadeCount'` |
| `primary_source` | `string` | ```text Primary source of the timer, see qtmr_primary_count_source_t enumerator type of the MCUXpresso SDK ```  This property is **required**.  Legal values: `'kQTMR_ClockCounter0InputPin'`, `'kQTMR_ClockCounter1InputPin'`, `'kQTMR_ClockCounter2InputPin'`, `'kQTMR_ClockCounter3InputPin'`, `'kQTMR_ClockCounter0Output'`, `'kQTMR_ClockCounter1Output'`, `'kQTMR_ClockCounter2Output'`, `'kQTMR_ClockCounter3Output'`, `'kQTMR_ClockDivide_1'`, `'kQTMR_ClockDivide_2'`, `'kQTMR_ClockDivide_4'`, `'kQTMR_ClockDivide_8'`, `'kQTMR_ClockDivide_16'`, `'kQTMR_ClockDivide_32'`, `'kQTMR_ClockDivide_64'`, `'kQTMR_ClockDivide_128'` |
| `secondary_source` | `string` | ```text Secondary source of the timer, see qtmr_input_source_t enumerator type of the MCUXpresso SDK ```  Legal values: `'kQTMR_Counter0InputPin'`, `'kQTMR_Counter1InputPin'`, `'kQTMR_Counter2InputPin'`, `'kQTMR_Counter3InputPin'` |
| `filter_count` | `int` | ```text Fault filter count (0-255). ``` |
| `filter_period` | `int` | ```text Fault filter period (0-255). ``` |
| `freq` | `int` | ```text clock frequency (only used for external clock sources) ``` |

Deprecated properties not inherited from the base binding file.

(None)

Properties inherited from the base binding file, which defines
common properties that may be set on many nodes. Not all of these
may apply to the “nxp,imx-tmr” compatible.

| Name | Type | Details |
| --- | --- | --- |
| `status` | `string` | ```text indicates the operational status of a device ```  Legal values: `'ok'`, `'okay'`, `'disabled'`, `'reserved'`, `'fail'`, `'fail-sss'`  See [Important properties](../../../intro-syntax-structure.md#dt-important-props) for more information. |
| `compatible` | `string-array` | ```text compatible strings ```  This property is **required**.  See [Important properties](../../../intro-syntax-structure.md#dt-important-props) for more information. |
| `reg` | `array` | ```text register space ```  See [Important properties](../../../intro-syntax-structure.md#dt-important-props) for more information. |
| `reg-names` | `string-array` | ```text name of each register space ``` |
| `interrupts` | `array` | ```text interrupts for device ```  See [Important properties](../../../intro-syntax-structure.md#dt-important-props) for more information. |
| `interrupts-extended` | `compound` | ```text extended interrupt specifier for device ``` |
| `interrupt-names` | `string-array` | ```text name of each interrupt ``` |
| `interrupt-parent` | `phandle` | ```text phandle to interrupt controller node ``` |
| `label` | `string` | ```text Human readable string describing the device (used as device_get_binding() argument) ```  See [Important properties](../../../intro-syntax-structure.md#dt-important-props) for more information.  This property is **deprecated**. |
| `clocks` | `phandle-array` | ```text Clock gate information ``` |
| `clock-names` | `string-array` | ```text name of each clock ``` |
| `#address-cells` | `int` | ```text number of address cells in reg property ``` |
| `#size-cells` | `int` | ```text number of size cells in reg property ``` |
| `dmas` | `phandle-array` | ```text DMA channels specifiers ``` |
| `dma-names` | `string-array` | ```text Provided names of DMA channel specifiers ``` |
| `io-channels` | `phandle-array` | ```text IO channels specifiers ``` |
| `io-channel-names` | `string-array` | ```text Provided names of IO channel specifiers ``` |
| `mboxes` | `phandle-array` | ```text mailbox / IPM channels specifiers ``` |
| `mbox-names` | `string-array` | ```text Provided names of mailbox / IPM channel specifiers ``` |
| `wakeup-source` | `boolean` | ```text Property to identify that a device can be used as wake up source.  When this property is provided a specific flag is set into the device that tells the system that the device is capable of wake up the system.  Wake up capable devices are disabled (interruptions will not wake up the system) by default but they can be enabled at runtime if necessary. ``` |
| `power-domain` | `phandle` | ```text Power domain the device belongs to.  The device will be notified when the power domain it belongs to is either suspended or resumed. ``` |
| `zephyr,pm-device-runtime-auto` | `boolean` | ```text Automatically configure the device for runtime power management after the init function runs. ``` |
